deleted old html & css, renamed 'new' classes to normal, more readable, fixed some syntax

--- a/assets/css/portfolio-style.css
+++ b/assets/css/portfolio-style.css
@@ -1,4 +1,4 @@
-.projects-container-new {
+.projects-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -6,59 +6,33 @@
     padding: 0 25px 0 25px;
 }
 
-.project-pictures-new {
+.project-display {
     position: relative;
     overflow: auto;
 }
 
-.project-names-new {
+.project-names {
     z-index: 100;
     position: absolute;
 }
 
-.project-pictures-new, .project-names-new {
+.project-pictures, .project-names {
     margin: 0 15px 20px 15px;
 }
 
-.project-pictures-even {
+.project-pictures-adjustment {
     margin-right: 40%;
 }
 
-.projects-container {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    padding-top: 30px;
-}
-
-.first-row, .second-row, .third-row {
-    display: flex;
-    justify-content: center;
-}
-
-.project-picture, .project-name {
-    width: 150px;
-    margin: 0 15px 40px 15px;
-}
-
-.project-pics-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-}
-
-.project-names-container {
-    position: absolute;
-    display: flex;
-    align-self: flex-end;
-    padding-bottom: 8px;
-    width: 100%;
-}
-
-.project-name1111, .project-names-new {
+.project-names {
     background-color: #4aaaa5;
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 80px;
+    margin-top: 90px;
+}
+
+.project-header {
+    margin: 15px 0 15px 0;
+    font-weight: normal;
 }
